<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlueRecorder</string>
    <string name="app_name_image_card" >ImageCard</string>
    <string name="app_name_video_card">VideoCard</string>
    <string name="record_your_message">Record your message</string>
    <string name="message_recorded">Message recorded</string>
    <string name="review_message">Review message</string>
    <string name="recording">Record</string>
    <string name="recording_stopped">Stop</string>
    <string name="recording_paused">Pause</string>
    <string name="internal_storage_is_full">Phone storage is full</string>
    <string name="external_storage_is_full">SD card storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card">Please insert SD card firstly or change memory location to phone.</string>
    <string name="min_available">%d min available</string>
    <string name="sec_available">%ds available</string>
    <string name="min_sec_available">%ds available</string>
    <string name="accept">Save</string>
    <string name="discard">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" formatted="false">%02d:%02d</string>
    <string name="press_record">Ready</string>
    <string name="audio_db_title_format">yyyyMMddHHmmss</string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access">Unable to save</string>
    <string name="error_app_internal">Internal application error</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>
    <string name="error_make_record_path">Unable to create recorded path</string>
    <string name="error_no_more_space">No more space to store files</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="cancle">Cancle</string>
    <string name="ask_to_save">Save this record?</string>
    <string name="files_browse">Browse the recording files</string>
    <string name="sdcard_toast">Please insert SD card firstly</string>
    <string name="settings">Settings</string>
    <string name="to_file_manager">Browse recordings</string>
    <string name="recoring_inCall">Phone is busy,Please wait</string>
    <string name="information">Details</string>
    <string name="rename_item">Rename</string>
    <string name="record_list_title">Record list</string>
    <string name="delete_song_desc">The record will be deleted.</string>
    <string name="main_tab_main">File</string>
    <string name="main_tab_msg">Message</string>
    <string name="main_tab_find">Find</string>
    <string name="main_tab_center">Center</string>
    <string name="main_tab_main_image">图片</string>
    <string name="main_tab_main_video">视频</string>
    <string name="main_tab_main_bluetooth">蓝牙录音</string>
    <string name="main_tab_main_telephone">电话录音</string>
    <string name="upload_item">Upload</string>
    <string name="reupload_item">重传</string>
    <string name="delete_item">Delete</string>
    <string name="no_records_title">No records</string>
    <string name="path">Path:</string>
    <string name="size">File size:</string>
    <string name="file_upload_init">Unupload</string>
    <string name="file_upload_waiting">Watting</string>
    <string name="file_uploading">Uploading</string>
    <string name="file_upload_success">Success</string>
    <string name="file_upload_fail">Failed</string>
    <string name="notification_upload_title">上传</string>
    <string name="notification_download_title">下载</string>
    <string name="notification_upload_result_success">上传成功</string>
    <string name="notification_upload_result_fail">上传失败</string>
    <string name="notification_download_result_success">下载成功</string>
    <string name="notification_download_result_fail">下载失败</string>
    <string name="type">MIME Type:</string>
    <string name="duration">Duration:</string>
    <string name="menu_search">Search</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="unknown">Unknown</string>
    <string name="records_title">Records</string>
    <string name="zero_time">0:00</string>
    <string name="record_rename">Please input new record name:</string>
    <string name="storage_setting">Memory location</string>
    <string name="storage_setting_sdcard_item">SD card</string>
    <string name="storage_setting_local_item">Phone</string>
    <string name="format_setting">File type</string>
    <string name="setting_setting">Settings</string>
    <string name="format_setting_3GPP_item">MP3</string>
    <string name="format_setting_AMR_item">WAV</string>
    <string name="record_saved">Record saved</string>
    <string name="record_name_cannot_empty">New record name can not be empty</string>
    <string name="FileRename_ERR_NAMEINV">"File name include invalid character "</string>
    <string name="durationformatshort" formatted="false">%2$d:%5$02d</string>
    <string name="durationformatlong" formatted="false">%1$d:%3$02d:%5$02d</string>
    <string name="no_phonestorage">Phonestorage unmounted</string>
    <string name="file_exists">The same name exists</string>
    <string name="list_changed">The list is changed, Please reload.</string>
    <string name="list">Record list</string>
    <string name="audio_bind_error">Service bind failed</string>
    <string name="service_open_error_msg" msgid="7061754255330276478">"Failed to open file"</string>
    <string name="select_delete_file" msgid="7061754255330276478">Please select file</string>
    <string-array name="external_sd_path">
        <item>/storage/extSdCard</item>
        <item>/storage/sdcard1</item>
        <item>/mnt/sdcard2</item>
        <item>/mnt/sdcard-ext</item>
        <item>/mnt/ext_sdcard</item>
        <item>/mnt/sdcard/SD_CARD</item>
        <item>/mnt/sdcard/extra_sd</item>
        <item>/mnt/extrasd_bind</item>
        <item>/mnt/sdcard/ext_sd</item>
        <item>/mnt/sdcard/external_SD</item>
    </string-array>
    <string name="_check_version_str">正在检查更新，请稍等。。。</string>
    <string name="_check_version_result_title_str">升级提示</string>
    <string name="_check_version_result_success_message_str">您当前已经是最新版本</string>
    <string name="_check_version_result_error_message_str">您当前已经是最新版本</string>
    <string name="_check_version_result_ok_str">确定</string>
    <string name="_check_version_dialog_title_str">软件版本更新</string>
    <string name="_check_version_dialog_ok_button_str">立即更新</string>
    <string name="_check_version_dialog_cancle_button_str">以后再说</string>
    <string name="_loading_new_str">正在下载新版本</string>
    <string name="_loading_new_cancle_str">取消</string>
    <string name="_loading_str">下载</string>
    <string name="register_email_tip">链接已发送至</string>
    <string name="register_email_name_tip">%1$s</string>
    <string name="register_email_view_tip">请及时登录邮箱激活完成注册</string>
    <string name="login_main_tip">登录可以让附近的人发现你</string>
    <string name="login_registered_unactive">请登录(%1$s)邮箱激活账号</string>
    <string name="login_not_active">登录失败，请先激活账号</string>
    <string name="contacts_title">好友</string>
    <string name="contacts_contact">通讯录</string>
    <string name="contacts_scene">感应</string>
    <string name="contacts_add_title">添加好友</string>
    <string name="contacts_add_friend">好友</string>
    <string name="contacts_add_success">好友添加成功</string>
    <string name="contacts_add_fail">好友添加失败</string>
    <string name="contacts_add_send">已发送验证信息,请等待验证通过</string>
    <string name="contacts_add_waiting">等待验证</string>
    <string name="contacts_search_hint">通过注册号/手机号/邮箱查找</string>
    <string name="contacts_search_empty">未搜索到用户</string>
    <string name="contacts_local_title">手机通讯录</string>
    <string name="contacts_local_add">添加</string>
    <string name="contacts_local_invate">邀请</string>
    <string name="contacts_qq">QQ</string>
    <string name="contacts_weixin">微信</string>
    <string name="contacts_title_choose_contacts">选择好友</string>
    <string name="contacts_choose_finish">完成</string>
    <string name="not_checked_contacts">您还没有选择好友!</string>
    <string name="checked_count">已选择(%1$d)</string>
    <string name="local_contacts_confirmdialog_title">通讯录导入</string>
    <string name="local_contacts_confirmdialog_content">是否允许通讯录导入?</string>
    <string name="local_contacts_confirmdialog_yes">允许</string>
    <string name="local_contacts_confirmdialog_no">拒绝</string>
    <string name="local_contacts_confirmdialog_sync_title">同步通讯录</string>
    <string name="local_contacts_confirmdialog_sync_content">检测到您的通讯录发生变化,是否同步?</string>
    <string name="local_contacts_confirmdialog_upload_title">上传通讯录</string>
    <string name="local_contacts_confirmdialog_upload_content">您还没有上传通讯录,是否上传?</string>
    <string name="treat_online_detail_no_rate">没有好评</string>
    <string name="firend_detail_title">详细信息</string>
    <string name="personal_detail_name_memo">%1$s</string>
    <string name="personal_detail_nickname">昵称:  %1$s</string>
    <string name="personal_detail_nickname_default">匿名</string>
    <string name="personal_detail_user_code">ID: %1$s</string>
    <string name="personal_detail_memo">设置备注和标签</string>
    <string name="personal_detail_address">地区 </string>
    <string name="personal_detail_message">个人动态</string>
    <string name="personal_detail_signature">个性签名</string>
    <string name="personal_detail_send_message">发消息</string>
    <string name="personal_center_add_text_message_hint">这一刻的想法\.\.\.</string>
    <string name="personal_center_add_none_message">内容不能为空。</string>
    <string name="personal_center_add_new_message_title">新动态</string>
    <string name="personal_center_add_new_message_submit">发送</string>
    <string name="sms_setting_title">设置</string>
    <string name="sms_list_back">返回</string>
    <string name="sms_setting_update">升级软件：</string>
    <string name="sms_setting_newer">可更新至 <xliff:g id="number">%1$s</xliff:g></string>
    <string name="sms_setting_newest">当前已是最新版本</string>
    <string name="sms_setting_suggestion">投诉建议</string>
    <string name="sms_setting_suggestion_notice">大家的建议为提高软件质量已经起到作用，在此深表感谢。对于大家提出的问题会给与解答，希望大家继续提出宝贵的意见和建议！</string>
    <string name="sms_setting_suggestion_null">请输入投诉或者建议内容</string>
    <string name="sms_setting_suggestion_long">输入的投诉或者建议内容太长</string>
    <string name="sms_setting_suggestion_success">反馈成功，感谢参与！</string>
    <string name="sms_setting_suggestion_commit">提交</string>
    <string name="sms_setting_help">帮助中心</string>
    <string name="sms_setting_help_software">1、软件介绍</string>
    <string name="sms_setting_about_us">1、关于我们</string>
    <string name="sms_setting_about_us_content">项目团队是由多年从事JavaEE开发和Android移动物联网开发的资深技术专家组成。拥有丰富的基于Android平台开发经营，能高效、快速完成Android定制开发。</string>
    <string name="sms_setting_about_contact">2、联系我们</string>
    <string name="sms_setting_about_cooperation">3、项目合作</string>
    <string name="drovik_frame_local_image_str">图片</string>
    <string name="drovik_frame_local_video_str">视频</string>
    <string name="drovik_frame_local_audio_str">音频</string>
    <string name="drovik_frame_local_other_str">其他</string>
    <string name="drovik_frame_remote_image_str">图片</string>
    <string name="drovik_frame_remote_video_str">视频</string>
    <string name="drovik_frame_remote_audio_str">音频</string>
    <string name="drovik_frame_remote_other_str">其他</string>
</resources>