<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone"
    android:orientation="vertical" >

   <LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="35.0dip"
		android:orientation="horizontal" 
		android:gravity="center_vertical">

	    <Button
     	    android:id="@+id/frame_btn_remote_image"
     	    style="@style/frame_button"
     	    android:text="@string/drovik_frame_remote_image_str" />

     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent" 
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button
     	    android:id="@+id/frame_btn_remote_video"
     	    style="@style/frame_button"
     	    android:text="@string/drovik_frame_remote_video_str" />

     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent" 
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button 
     		android:id="@+id/frame_btn_remote_audio"
     		style="@style/frame_button"
         	android:text="@string/drovik_frame_remote_audio_str"/>
     	
     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent" 
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button 
     		android:id="@+id/frame_btn_remote_other"
     		style="@style/frame_button"
         	android:text="@string/drovik_frame_remote_other_str"/>
    </LinearLayout>

	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_remote_image"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
        ptr:ptrDrawable="@drawable/widget_video_normal" />
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_remote_video"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
        ptr:ptrDrawable="@drawable/widget_video_normal"
	    android:visibility="gone"/>
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_remote_audio"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
        ptr:ptrDrawable="@drawable/widget_video_normal"
	    android:visibility="gone"/>
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_remote_other"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
        ptr:ptrDrawable="@drawable/widget_video_normal"
	    android:visibility="gone"/>
</LinearLayout>