<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
	            android:id="@+id/sms_contact_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_us"
	            android:textSize="20sp" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:text="@string/sms_setting_about_us_content" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_contact"
	            android:textSize="20sp" />
            
            <TextView
	            android:id="@+id/sms_about_contact_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:autoLink="web|phone" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_cooperation"
	            android:textSize="20sp" />

            <TextView
	            android:id="@+id/setting_about_cooperation_id"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:autoLink="email"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>