<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="35.0dip"
		android:orientation="horizontal"
		android:visibility="gone"
		android:gravity="center_vertical">

	    <Button
     	    android:id="@+id/frame_btn_local_image"
     	    style="@style/frame_button"
     	    android:visibility="gone"
     	    android:text="@string/drovik_frame_local_image_str" />

     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent" 
     	    android:visibility="gone"
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button
     	    android:id="@+id/frame_btn_local_video"
     	    style="@style/frame_button"
     	    android:visibility="gone"
     	    android:text="@string/drovik_frame_local_video_str" />

     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent"
     	    android:visibility="gone"
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button 
     		android:id="@+id/frame_btn_local_audio"
     		style="@style/frame_button"
     		android:visibility="gone"
         	android:text="@string/drovik_frame_local_audio_str"/>
     	
     	<ImageView android:layout_width="wrap_content" 
     	    android:layout_height="fill_parent"
     	    android:visibility="gone"
     	    android:background="@drawable/frame_button_cutline"/>
     	
     	<Button 
     		android:id="@+id/frame_btn_local_other"
     		style="@style/frame_button"
     		android:visibility="gone"
         	android:text="@string/drovik_frame_local_other_str"/>
    </LinearLayout>

	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_local_image"
	  	style="@style/widget_gridview"
        ptr:ptrMode="pullFromStart"
        ptr:ptrHeaderBackground="@color/bg_pull_to_refresh_header"
        ptr:ptrHeaderTextColor="@color/white"
	    ptr:ptrAnimationStyle="flip"
        ptr:ptrDrawable="@drawable/widget_video_normal"/>
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_local_video"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
	    ptr:ptrHeaderBackground="@color/bg_pull_to_refresh_header"
	    ptr:ptrHeaderTextColor="@color/white"
	    ptr:ptrAnimationStyle="flip"
        ptr:ptrDrawable="@drawable/widget_video_normal"
	    android:visibility="gone"/>
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_local_audio"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
	    ptr:ptrHeaderBackground="@color/bg_pull_to_refresh_header"
	    ptr:ptrHeaderTextColor="@color/white"
	    ptr:ptrAnimationStyle="flip"
	    android:visibility="gone"/>
	
	<com.handmark.pulltorefresh.library.PullToRefreshGridView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
	  	android:id="@+id/frame_list_view_local_other"
	    style="@style/widget_gridview"
	    ptr:ptrMode="pullFromStart"
	    ptr:ptrHeaderBackground="@color/bg_pull_to_refresh_header"
	    ptr:ptrHeaderTextColor="@color/white"
	    ptr:ptrAnimationStyle="flip"
        ptr:ptrDrawable="@drawable/widget_video_normal"
	    android:visibility="gone"/>
	
</LinearLayout>